# auto-benchmarkcard

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  backlog_162_benchmarks.txt  pyproject.toml
scripts/: batch_generate.py  batch_process.py  fix_cards.py  generate_manual.py  paper_resolver_comparison.py  rename_cards_to_canonical.py  test_webhook_local.py
spaces/benchmarkcard-webhook/: Dockerfile  README.md  app.py  requirements.txt  worker.py
src/auto_benchmarkcard/: __init__.py  __main__.py  card_utils.py  cli.py  cli_logger.py  config.py  eee_workflow.py  llm_handler.py  logging_setup.py  output.py  state.py  workers.py  workflow.py
src/auto_benchmarkcard/tools/ai_atlas_nexus/: __init__.py  ai_atlas_nexus_tool.py
src/auto_benchmarkcard/tools/composer/: __init__.py  composer_tool.py  gold_example.json
src/auto_benchmarkcard/tools/docling/: __init__.py  docling_tool.py
src/auto_benchmarkcard/tools/eee/: eee_tool.py  paper_resolver.py
src/auto_benchmarkcard/tools/extractor/: __init__.py  extractor_tool.py
src/auto_benchmarkcard/tools/factreasoner/: README.md  __init__.py  factreasoner_tool.py
src/auto_benchmarkcard/tools/hf/: __init__.py  hf_tool.py
src/auto_benchmarkcard/tools/html/: __init__.py  html_tool.py
src/auto_benchmarkcard/tools/rag/: README.md  __init__.py  atomizer.py  format_converter.py  indexer.py  rag_retriever.py
src/auto_benchmarkcard/tools/unitxt/: __init__.py  test_unitxt.py  unitxt_tool.py
